Add lombok to service
