# getnet-srv-merchant-portal/src/main/java/com/santander/getnet/srv/merchant_portal/model/SasToken.java
@@ -1,0 +1,15 @@
+package com.santander.getnet.srv.merchant_portal.model;
+
+import lombok.*;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class SasToken {
+
+    private String tokenCorp;
+    private String cookieCorp;
+    private String jwt;
+}
